--- a/jqassistant/index.adoc
+++ b/jqassistant/index.adoc
@@ -22,7 +22,7 @@ include::jQA:Summary[]
 The following rule groups are executed during a build:
 
 [[default]]
-[role=group,includesGroups="maven:Default,package:Default,layer:Default,spring-component:Default,model:Default,business:Default,management:Default,test:Default,vcs:Default"]
+[role=group,includesGroups="maven:Default,package:Default,layer:Default,spring-component:Default,model:Default,business:Default,management:Default,test:Default,vcs:Default,codeanalysis:Default"]
 - <<maven:Default>>
 - <<package:Default>>
 - <<layer:Default>>
@@ -32,6 +32,7 @@ The following rule groups are executed during a build:
 - <<management:Default>>
 - <<test:Default>>
 - <<vcs:Default>>
+- <<codeanalysis:Default>>
 
 include::maven.adoc[]
 include::package.adoc[]
@@ -47,6 +48,7 @@ include::spring-data.adoc[]
 include::spring-jmx.adoc[]
 include::spring-test.adoc[]
 include::assertj.adoc[]
+include::codeanalysis.adoc[]
 
 == Imported Rules
 
