--- a/jqassistant/index.adoc
+++ b/jqassistant/index.adoc
@@ -22,13 +22,12 @@ include::jQA:Summary[]
 The following rule groups are executed during a build:
 
 [[default]]
-[role=group,includesGroups="maven:Default,package:Default,layer:Default,spring-component:Default,model:Default,business:Default,management:Default,test:Default,vcs:Default,codeanalysis:Default"]
+[role=group,includesGroups="maven:Default,package:Default,layer:Default,spring-component:Default,model:Default,management:Default,test:Default,vcs:Default,codeanalysis:Default"]
 - <<maven:Default>>
 - <<package:Default>>
 - <<layer:Default>>
 - <<spring-component:Default>>
 - <<model:Default>>
-- <<business:Default>>
 - <<management:Default>>
 - <<test:Default>>
 - <<vcs:Default>>
@@ -39,7 +38,6 @@ include::package.adoc[]
 include::layer.adoc[]
 include::spring-component.adoc[]
 include::model.adoc[]
-include::business.adoc[]
 include::management.adoc[]
 include::test.adoc[]
 include::vcs.adoc[]
