add direct file import with callouts

--- a/jqassistant/test.adoc
+++ b/jqassistant/test.adoc
@@ -11,6 +11,16 @@ The following reports are created:
 
 - <<test:TestAffectedByLastCommit>>
 
+=== Annotations
+When depending on infrastructure or framework functions, additional annotations are needed for a test case.
+
+[source,java]
+.Example for annotating tests
+----
+include::../src/test/java/org/springframework/samples/petclinic/service/ClinicServiceJpaTests.java[tag=test_annotations]
+----
+<1> The `@ActiveProfiles` annotation is only needed when you are using data from the database.
+
 === Constraints
 
 [[test:TestMethodWithoutAssertion]]
