--- a/jqassistant/maven.adoc
+++ b/jqassistant/maven.adoc
@@ -1,30 +1,14 @@
 [[maven:Default]]
-[role=group,includesConcepts="maven:ProjectArtifactDependencyDiagram"]
+[role=group,includesConcepts="maven:*"]
 == Maven
 
 This chapter describes the rules related to Maven.
 
-=== Concepts
-
-[[maven:MainArtifact]]
-.Labels all main artifacts created by Maven modules with `Main`
-[source,cypher,role=concept]
-----
-MATCH
-  (:Maven:Project)-[:CREATES]->(mainArtifact:Artifact)
-WHERE
-  mainArtifact.type <> "test-jar"
-SET
-  mainArtifact:Main
-RETURN
-  mainArtifact as MainArtifact
-----
-
 === Reports
 
 [[maven:ProjectArtifactDependencyDiagram]]
-[source,cypher,role=concept,requiresConcepts="maven:MainArtifact",reportProperties="render=component-diagram"]
-.Creates a diagram about project artifact dependencies.
+[source,cypher,role=concept,reportType="plantuml-component-diagram"]
+.Diagram about project artifact dependencies.
 ----
 MATCH
   (:Maven:Project)-[:CREATES]->(artifact:Artifact)
